2008-02-22  Dominic Lachowicz  <domlachowicz@gmail.com>

	* gdk-pixbuf/queryloaders.c (loader_sanity_check): It's perfectly acceptable
	for a module to only support the save_to_callback() method if it marks itself
	as WRITABLE
	
2008-02-16  Matthias Clasen  <mclasen@redhat.com>
	
	* configure.in: Bump version

2008-02-16  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.13.0 ===

	* Makefile.decl: Start Xvfb at depth 16 so cairo doesn't choke.

2008-02-21  Tor Lillqvist  <tml@novell.com>

	* gtk/gtkfilechooserdefault.c (list_mtime_data_func) [Win32]: Must
	pass the format string to strftime in the C library's locale's
	charset, not the system's. Correspondingly, the return value from
	strftime() is in the C library's locale's charset. (#509885)

2008-02-20  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkwindow-quartz.c: (gdk_window_set_decorations): Set
	the right window level and shadow after recreating the window.

	* gdk/quartz/GdkQuartzView.c: (drawRect): Invalidate the shadow if
	necessary after drawing (bug #517338).

2008-02-20  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* gtk/gtkbuilder.c (_gtk_builder_enum_from_string): fix missing
	call to g_type_class_unref in case of error. (#517563)

2008-02-18  Sven Neumann  <sven@gimp.org>

	* gtk/Makefile.am (STOCK_ICONS)
	* gtk/stock-icons/16/gtk-page-setup.png
	* gtk/stock-icons/24/gtk-page-setup.png: added page-setup icons
	taken from GNOME icon theme.

	* gtk/gtkstock.[ch]: added GTK_STOCK_PAGE_SETUP. Closes bug #514410.

2008-02-18  Runa Bhattacharjee <runabh@gmail.com>

	* configure.in: Added Kannada (kn) to ALL_LINGUAS

2008-02-17  Johan Dahlin  <johan@gnome.org>

	* gtk/gtk-builder-convert (GtkBuilderConverter._add_action_from_menuitem): 
	When converting a stock item based on the label, remove the label property.

2008-02-17  Richard Hult  <richard@imendio.com>

	* gdk/quartz/GdkQuartzWindow.c: (showAndMakeKey): Update the